--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*importing google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Cutive+Mono&display=swap');
+/* Set box-sizing of entire HTML elements to 'border-box'*/
 * {
   box-sizing: border-box;
 }
 header div,
 main div,
-foot div, {
+foot div {
   width: 800px;
   margin: auto;
   padding: 20px;
@@ -17,7 +18,6 @@ header {
   color: #c9ada7;
 }
 header {
-  box-sizing: border-box;
   height: 200px;
   border: 1px solid #4a4e69;
   margin-bottom: -35px;
@@ -41,6 +41,7 @@ header h2 {
   margin-top: 40px;
 }
 /*styling main container*/
+/*Below are reusable containers that I use throughout the main container when I want cascaded properties*/
 .center-text {
   text-align: center;
 }
@@ -79,17 +80,17 @@ main h2 {
   text-align: center;
   font-size: 50px;
 }
-
+/*Set the styling of everything inside the main div container*/
 main div {
   font-family: "Cutive Mono", monospace;
   font-size: 18px;
   text-align: left;
 }
-
+/*Made all list items in this element inside the border so they can move with the content*/
 main li {
 list-style-position: inside;
 }
-
+/*Pseudoclasses that customize howlinks look at certain conditions*/
 a:link {color: #22223b;}
 a:visited {color: #f2e9e4;}
 a:hover {color: #4a4e69;}
@@ -102,6 +103,7 @@ a:active {color: #c9ada7;}
 footer {
   background-color: #4a4e69;
 }
+/*Pushing the text in my footer up with padding inside the border*/
 .footer-padding {
   padding-bottom: 50% 
 }
